# sparkfun-openlog-rs

./: Cargo.toml
src/: address.rs  command.rs  lib.rs  status.rs  version.rs
tests/: ft32h_integration.rs
