[package]
name = "sparkfun-openlog"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
ftdi-embedded-hal = { version = "0.22.0", features = ["libftd2xx"] }
embedded-hal-compat = "0.13"
anyhow = "1"

[patch.crates-io]
libftd2xx-ffi = { path = "../libftd2xx-ffi" }