[package]
name = "sparkfun-openlog"
description = "A platform-agnostic, embedded-hal driver for the [Sparkfun OpenLogger](https://www.sparkfun.com/products/13712)."
categories = ["embedded-hal", "no_std", "sparkfun", "embedded"]
repository = "https://github.com/JanBerktold/sparkfun-openlog-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
embedded-hal = "1.0.0"

[dev-dependencies]
ftdi-embedded-hal = { version = "0.22.0", features = ["libftd2xx"] }
embedded-hal-compat = "0.13"
anyhow = "1"